# GP2040-CE

./: .gitignore  .gitmodules  CMakeLists.txt
headers/addons/: i2canalog1219.h
include/: picolight.h
lib/AnimationStation/src/: AnimationStation.cpp  AnimationStation.hpp
lib/TinyUSB_Gamepad/include/: webserver_descriptors.h
lib/TinyUSB_Gamepad/src/: hid_driver.cpp  xinput_driver.cpp
src/: configmanager.cpp  gamepad.cpp  gp2040.cpp  main.cpp  storagemanager.cpp
src/configs/: webconfig.cpp
